# OctaneMechOpenGLGame

./: .clang-format  .gitignore  README  README.md
.github/: copilot-instructions.md
basictut/: CMakeLists.txt
basictut/src/: DriverBots.cpp  basic.cpp
gameupdates/: README.md
gameupdates/mac/umbramech/: CMakeLists.txt  README.md
gameupdates/mac/umbramech/docs/older_code/: DriverBots.cpp
gameupdates/mac/umbramech/include/: DriverBots.hpp  bot.h  bot.hpp  camera.h  camera.hpp  collision.h  collision.hpp  defaults.hpp  fireants.h  fireants.hpp  gldrawlib.h  gldrawlib.hpp  globals.hpp  keys.h  keys.hpp  legacy_stubs.hpp  lights.h  lights.hpp  list.hpp  maps.h  maps.hpp  menu.h  menu.hpp  objects.h  objects.hpp  octree.hpp  particles.hpp  plist.hpp  precompiled.hpp  resource.h  sound.h  text.hpp  tree.hpp  walls.h  walls.hpp  world.hpp
gameupdates/mac/umbramech/include/network/: network.h
gameupdates/mac/umbramech/resources/: tree_test.x
gameupdates/mac/umbramech/src/: DriverBots.cpp  ant.cpp  bitmap.cpp  bot.cpp  camera.cpp  collision.cpp  commands.cpp  cube.cpp  fireants.cpp  garden.cpp  glant.cpp  gldrawlib.cpp  globals.cpp  grid.cpp  keys.cpp  legacy_stubs.cpp  lights.cpp  list.cpp  los.cpp  main.cpp  maps.cpp  norm_cube.cpp  objects.cpp  octree.cpp  particles.cpp  pheromone.cpp  play.cpp  plist.cpp  pyramid.cpp  renderants.cpp  sound.cpp  stars.cpp  static.cpp  text.cpp  tree.cpp  umbragame.cpp  umbramain.cpp  wirebox.cpp  world.cpp
gameupdates/mac/umbramech/src/network/: clients.cpp  connect.cpp  msg.cpp  network.cpp  stats.cpp
legacy/octanemech/glants_mech/linux/: .cproject
legacy/octanemech/glants_mech/linux/Debug/: makefile  sources.mk
legacy/octanemech/glants_mech/linux/src/: ant.c  bitmap.c  bot.c  bot.h  camera.c  camera.h  collision.c  collision.h  commands.c  cube.c  defaults.h  fireants.c  fireants.h  garden.c  glant.c  gldrawlib.c  gldrawlib.h  globals.c  globals.h  grid.c  keys.c  keys.h  lights.c  lights.h  list.c  list.h  los.c  maps.c  maps.h  menu.h  norm_cube.c  objects.c  objects.h  octree.c  octree.h  particles.c  particles.h  pheromone.c  play.c  plist.c  (+12 more)
legacy/octanemech/glants_mech/win32/: .cproject  .project
legacy/octanemech/glants_mech/win32/glAntsV05/: ant.cpp  bitmap.cpp  bot.cpp  bot.h  camera.cpp  camera.h  collision.cpp  collision.h  commands.cpp  cube.cpp  defaults.h  fireants.cpp  fireants.h  garden.cpp  glAnt.aps  glant.cpp  glant.ncb  gldrawlib.cpp  gldrawlib.h  globals.cpp  globals.h  grid.cpp  lights.cpp  lights.h  list.cpp  list.h  los.cpp  maps.cpp  menu.h  norm_cube.cpp  objects.cpp  octree.cpp  particles.cpp  particles.h  pheromone.cpp  plist.cpp  plist.h  pyramid.cpp  resource.h  stars.cpp  (+8 more)
legacy/octanemech/haskellglcamera/src/: Makefile  OctaneMech.hs
octanemech/glAntsMechGameWinNew/: README.md
octanemech/glants_mech/: remove_cvs.sh  remove_svn.sh
octanemech/glants_mech/linux/: .project  CHANGES  Makefile  README  glants
octanemech/glants_mech/linux/src/: Makefile  bot.h  camera.c  defaults.h  gldrawlib.c  grid.c  list.c  los.c  norm_cube.c  objects.c  particles.h  plist.h  pyramid.c  world.c  world.h
octanemech/glants_mech/win32/glAntsV05/: bot.cpp  bot.h  camera.cpp  defaults.h  glant.cpp  glant.opt  glant.plg  gldrawlib.h  globals.cpp  globals.h  grid.cpp  lights.cpp  list.h  maps.h  menu.h  norm_cube.cpp  octree.cpp  octree.h  plist.h  pyramid.cpp  readme.txt  stars.cpp  static.cpp  t.txt  text.cpp  tree.cpp  tree.h  wirebox.cpp  world.cpp
octanemech/haskellglcamera/src/: BasicMechs.hs  ColorDefs.hs  MechGenericObjects.hs  MechTests.hs
octanemech/haskellglcamera/src/Tests/: GLTestsExample.hs
octanemech/haskellglcamera/src/example/: MatrixUtils.hs  MechTerrain.hs  OctaneMech.hs
octanemech/haskellglcamera/src/misc/: Test1.hs  Test2.hs
retutorials/basicopengl/: Makefile
retutorials/basicopengl/src/: basicopengl.cpp
retutorials/basictut/: Makefile
retutorials/basictut/src/: DriverBots.cpp  DriverBots.hpp  basic.cpp  list.cpp  list.hpp  plist.cpp  plist.hpp
retutorials/cameragl/src/: cameraglrun.cpp
retutorials/cameragl2/: CMakeLists.txt  Makefile
retutorials/cameragl2/src/: cameraglrun2.cpp
retutorials/cameragl3/src/: cameraglrun3.cpp
retutorials/maingl/src/: basicopengl.cpp
retutorials/moreinput/: CMakeLists.txt  Makefile  README.md
retutorials/moreinput/src/: main.cpp
retutorials/objectsgl/: CMakeLists.txt
retutorials/openglgears/: README.md
retutorials/openglgears/src/: basicopengl.cpp
(+138 files in other folders)
